# open-xiaoai-bridge

./: AGENTS.md  CHANGELOG.md  Dockerfile  README.md  config.py  main.py
core/: app.py  external_conversation.py  openai.py  openai_conversation.py  openclaw.py  openclaw_conversation.py  wakeup_session.py  xiaoai.py
core/services/: api_server.py  speaker.py
core/services/audio/asr/: sauc.py  service.py
core/services/audio/kws/: keywords.py
native/: Cargo.toml
native/src/: lib.rs
native/src/tts/: doubao.rs  mod.rs
scripts/: start.sh
skills/audio-player/: SKILL.md
skills/audio-player/scripts/: api_client.py  fetch_youtube.py  normalize_loudness.py  play.py  search_local.py  stats_server.py
tests/: test_openclaw_protocol.py  test_wakeup_keywords.py
